--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <h3>portfolio</h3>
         </div>
         <div class="menu">
-            <a href="#">about</a>
+            <a href="#" class="active">about</a>
             <a href="#">skill</a>
             <a href="#">projects</a>
+            <a href="#">Achieve</a>
             <a href="#">contact</a>
         </div>
         <div class="hamburger">
