--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                      <h2>hai👋i'm selvam</h2>
                      <h3 class="animated-text"><span></span></h3>
                      <p>Experienced web developer passionate about creating user-friendly websites. Proficient in front-end technologies like HTML, CSS, JavaScript, React.js. Skilled in crafting custom web applications and e-commerce platforms. Strong communicator and problem-solver dedicated to delivering clean and efficient code. Constantly learning and staying up-to-date with emerging trends. Let's collaborate and bring your web ideas to life!</p>
-                     <a href="image\resume.pdf" download>Hire me</a> 
+                     <a href="image\resume.pdf" download>Resume</a> 
                 </div>
               
              <div class="social-media">
